# trading

./: Cargo.toml
src/: lib.rs  main.rs
src/alpaca_trading_client/: client.rs
src/bookkeeping/: book.rs
src/investment_strategy/: algorithm.rs  lib.rs
src/portfolio_picker/: links.txt
